change category name

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-grid-system": "^6.2.1",
     "react-redux": "^7.2.0",
     "react-scripts": "3.4.0",
+    "reactjs-popup": "^1.5.0",
     "redux": "^4.0.5"
   },
   "scripts": {
