--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "json-loader": "^0.5.7",
     "node-sass": "^4.13.1",
     "ramda": "^0.27.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-dropdown": "^1.7.0",
     "react-grid-system": "^6.2.1",
     "react-redux": "^7.2.0",
     "react-scripts": "3.4.0",
